[package]
name = "subnet-mask"
version = "0.2.0"
authors = ["Kjartan Óli Ágústsson <kjartanoli@protonmail.com>", "Dagur Benjamínsson <dagurbenjamins@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
